<resources>
    <string name="app_name">Movies and Series</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="account">Account</string>
    <string name="create">Create</string>
    <string name="create_naccount">Create\nAccount</string>
    <string name="back">Back</string>
    <string name="email">email</string>
    <string name="lastname">LastName</string>
    <string name="web_client_id">111485064642141750369</string>
</resources>